# pdf-ocr

./: .gitignore  README.md  ocr_processor.py  pyproject.toml  requirements.txt  run_all.sh  run_trocr.sh
server/: PROJECT_HANDOFF.md  PROJECT_LOG.md  README.md  deepseek_server.py  setup_ocr.sh  start_ocr_services.sh  stop_ocr_services.sh
tests/: conftest.py  test_engine_registry.py  test_pdf_processing.py  test_utils.py
