[project]
name = "pdf-ocr"
version = "0.1.0"
description = "Make scanned PDFs searchable using open-weight OCR models"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "transformers>=4.40.0",
    "sentencepiece",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4.0"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled separately

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
